# hasklate

./: .gitignore  LICENSE  Makefile  README.md  hasklate.cabal  main.hs  stack.yaml  test.hs
examples/: BasicPatternMatching.hs  Enum.hs  InfiniteList.hs  PatternMatching.hs
src/: Main.hs
