name:                  hasklate
version:               0.1.0.0
synopsis:              Haskell to C++ metaprogramming transpiler
description:           Haskell to C++ metaprogramming transpiler
homepage:              https://github.com/ekleog/hasklate#readme
bug-reports:           https://github.com/ekleog/hasklate/issues
author:                Léo Gaspard
maintainer:            Léo Gaspard <leo@gaspard.io>
copyright:             2016 Léo Gaspard
license:               MIT
license-file:          LICENSE
category:              Language
build-type:            Simple
cabal-version:         >=1.10

executable hasklate
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.4 && < 5
                     , haskell-src >= 1.0 && < 1.1
                     , mtl >= 2.2 && < 2.3
                     , containers >= 0.5 && < 0.6
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/ekleog/hasklate
